@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2023-11-27T16:12:37Z",
-  "count_outdated" : 2029,
-  "uniques_outdated" : 660,
+  "timestamp" : "2023-11-28T00:45:54Z",
+  "count_outdated" : 2031,
+  "uniques_outdated" : 662,
   "count" : 2137,
   "uniques" : 684,
   "views" : [
-    {
-      "timestamp": "2023-11-13T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "count_decinc": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 2 ],
-      "uniques_decinc": [ 1, 2 ]
-    },
     {
       "timestamp": "2023-11-14T00:00:00Z",
       "count": 20,
