@@ -1,12 +1,7 @@
 {
-  "count": 107,
-  "uniques": 22,
+  "count": 106,
+  "uniques": 21,
   "views": [
-    {
-      "timestamp": "2023-11-13T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2023-11-14T00:00:00Z",
       "count": 20,
