@@ -1,3 +1,12 @@
+2023-11-28T00:45:54Z:
+* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/7012581912 # 2119
+* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2023-11-28
+* notice: last 14d: unq all: 21 106
+* notice: prev accum: outdated-unq outdated-all / unq all: 660 2029 / 684 2137
+* notice: next accum: outdated-unq outdated-all / unq all: 662 2031 / 684 2137
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2023-11-13] / []
+
 2023-11-27T16:12:37Z:
 * notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/7007719289 # 2118
 * notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2023-11-27
